# riptide_onboarding

./: README.md
src/riptide_turtle/: CMakeLists.txt  README.md  package.xml
src/riptide_turtle/src/: kill_switch_node.py  turtle_kill_switch.cpp  turtle_kill_switch.py  turtle_node.cpp  turtle_node.py
